# LK-UniDock

./: .gitignore  README.md
Uni-Dock-main/: .gitignore  build_linux.sh  build_mac.sh  build_windows.bat
Uni-Dock-main/unidock/: CMakeLists.txt
Uni-Dock-main/unidock/src/cuda/: common.cuh  precalculate.cu  precalculate_gpu.cuh
Uni-Dock-main/unidock/src/lib/: ad4cache.cpp  ad4cache.h  cache.cpp  cache.h  common.h  coords.cpp  file.h  monte_carlo.cc  random.cpp  random.h  vina.cpp  vina.h
Uni-Dock-main/unidock/src/main/: main.cpp
Uni-Dock-main/unidock/test/ligands/: 1iep_ligand_score.txt
Uni-Dock-main/unidock_tools/src/unidock_tools/modules/docking/: unidock.py
UniDock-Pro-main/: .gitignore  CMakeLists.txt  LICENSE  README.md  build_linux.sh  build_mac.sh  build_windows.bat
UniDock-Pro-main/.github/workflows/: build.yml
UniDock-Pro-main/src/cuda/: common.cuh  precalculate.cu  precalculate_gpu.cuh
UniDock-Pro-main/src/lib/: cache.h  common.h  coords.cpp  file.h  monte_carlo.cc  random.cpp  random.h  vina.cpp  vina.h
UniDock-Pro-main/src/main/: main.cpp
UniDock/UniDock-linux86/: split
UniDock/UniDock-macos-arm64/: Uni-Dock  UniDock-Pro
